# aming_claw

./: AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.aming-claw/reconcile/: semantic_enrichment.yaml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
agent/: ACCEPTANCE_WORKFLOW.md  ai_invocation.py  ai_lifecycle.py  backends.py  cli.py  observer_runtime.py  plugin_installer.py
agent/governance/: __init__.py  ai_output_intake.py  asset_impact.py  asset_inbox_contract.py  asset_projection.py  backlog_triage.py  batch_jobs.py  contract_template_registry.py  db.py  enums.py  external_project_governance.py  governance_index.py  graph_contracts.py  graph_enrich_config_ops.py  graph_events.py  graph_generator.py  graph_hint_projection.py  graph_proposal_index.py  graph_proposal_review.py  graph_query_trace.py  graph_rule_fingerprint.py  graph_snapshot_store.py  graph_structure_hints.py  graph_structure_ops.py  impact_analyzer.py  language_policy.py  mcp_server.py  mf_subagent_contract.py  mf_workflow_runtime.py  observer_repair_run.py  observer_session.py  parallel_branch_runtime.py  permissions.py  precheck_service.py  preflight.py  project_profile.py  project_service.py  raw_requirement.py  reconcile_feedback.py  reconcile_semantic_ai.py  (+14 more)
agent/mcp/: executor.py  server.py  tools.py
docker/: observer-reminder-echo-demo.Dockerfile
docs/: architecture.md  deployment.md  onboarding.md
scripts/: check_self_graph_bundle.py  live-ai-observer-route-demo.mjs  paradigm-route-context-demo.py  test-scenario-manager.mjs  test-scenarios.json
(+200 files in other folders)
